* 2012-08-31 - marcus.klein@open-xchange.com

 - Fix for bug 22751: Registering properly the actions for the conversion HTTP/JSON interface within dispatcher.

* 2012-08-29 - thorben.betten@open-xchange.com

 - Fix for bug 22860: Prevent NPE in file management

* 2012-08-20 - marcus.klein@open-xchange.com

 - Fix for bug 22803: Parse escaped characters properly from PO file without entering an endless loop.

* 2012-08-19 - thorben.betten@open-xchange.com

 - Fix for bug 22776: Set property "set-jaxb-validation-event-handler" to "false" to turn off the validation event handler.
 - Fix for bug 22735: Enable parsing of TNEF parts

* 2012-08-18 - thorben.betten@open-xchange.com

 - Fix for bug 22783: Respond unsupported auto-login feature as common "Invalid cookie." error
 - Fix for bug 22794: Applying proper map to created ListLsubEntryImpl instance to reflect its subscription status
 - Fix for bug 22795: Keep right instance of AJAXRequestData that is further used by dispatcher processing

* 2012-08-15 - marcus.klein@open-xchange.com

 - Fix for bug 22592: Corrected start script for usercopy CLT.

* 2012-08-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 22730: Added support for IMPP parameters, added mapping for different email fields  
 - Fix for bug 21794: Store filename for CalDAV resources  
 
* 2012-08-14 - marcus.klein@open-xchange.com

 - Fix for bug 22779: Preventing NullPointerException if some SOAP values are empty.

* 2012-08-13 - marcus.klein@open-xchange.com

 * Fix for bug 22773: Added missing imports for administrative SOAP services.

* 2012-08-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 22769: Don't update appointment unless necessary 
 
* 2012-08-09 - martin.herfurth@open-xchange.com

 - Fix for bug 22766: Fixed possible NPE
 - Fix for bug 22740: Rely on IMAP store's capabilities only

* 2012-08-08 - martin.herfurth@open-xchange.com

 - Fix for bug 22541: Fixed duplicate update mails.