@@ -6,6 +6,10 @@
 
  - Fix for bug 22860: Prevent NPE in file management
 
+* 2012-08-24 - jan.bauerdick@open-xchange.com
+
+ - Fix for bug 22838: New implementation of com.openexchange.sessiond.impl.SessionHandler.merge
+
 * 2012-08-20 - marcus.klein@open-xchange.com
 
  - Fix for bug 22803: Parse escaped characters properly from PO file without entering an endless loop.
